kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthra
  labels:
    app: healthra
